# hyph-utf8.json

./: .gitignore  LICENSE  README.md  hyph-utf8.cabal  stack.yaml
app/: Main.hs
json-nfc/: hyph-af.hyp.json  hyph-af.pat.json  hyph-bg.pat.json  hyph-bn.pat.json  hyph-cs.pat.json  hyph-cu.hyp.json  hyph-cy.pat.json  hyph-de-1901.pat.json  hyph-el-monoton.pat.json  hyph-el-polyton.pat.json  hyph-eu.pat.json  hyph-fi.pat.json  hyph-ga.pat.json  hyph-gl.pat.json  hyph-grc.pat.json  hyph-gu.pat.json  hyph-hr.pat.json  hyph-hu.pat.json  hyph-id.pat.json  hyph-is.pat.json  hyph-it.pat.json  hyph-kmr.pat.json  hyph-lt.pat.json  hyph-ml.pat.json  hyph-oc.pat.json  hyph-or.pat.json  hyph-pl.pat.json  hyph-ru.pat.json  hyph-sk.pat.json  hyph-sr-cyrl.pat.json  hyph-te.pat.json
json-nfd/: hyph-af.pat.json  hyph-bg.pat.json  hyph-ca.pat.json  hyph-cs.hyp.json  hyph-cs.pat.json  hyph-cu.hyp.json  hyph-cy.pat.json  hyph-de-1901.pat.json  hyph-de-1996.pat.json  hyph-de-ch-1901.pat.json  hyph-el-monoton.pat.json  hyph-el-polyton.pat.json  hyph-eo.pat.json  hyph-ga.hyp.json  hyph-gl.pat.json  hyph-grc.pat.json  hyph-hu.pat.json  hyph-hy.pat.json  hyph-is.pat.json  hyph-lt.pat.json  hyph-lv.pat.json  hyph-ml.pat.json  hyph-mn-cyrl.pat.json  hyph-nn.pat.json  hyph-pl.hyp.json  hyph-ru.hyp.json  hyph-sh-cyrl.hyp.json  hyph-sh-cyrl.pat.json  hyph-sh-latn.pat.json  hyph-sk.pat.json  hyph-sl.pat.json  hyph-sr-cyrl.hyp.json  hyph-ta.pat.json  hyph-te.pat.json  hyph-uk.pat.json
json-nfkc/: hyph-cu.pat.json  hyph-de-1996.pat.json  hyph-de-ch-1901.pat.json  hyph-el-monoton.pat.json  hyph-el-polyton.pat.json  hyph-en-gb.hyp.json  hyph-eo.pat.json  hyph-et.pat.json  hyph-fur.pat.json  hyph-grc.pat.json  hyph-hsb.pat.json  hyph-hy.pat.json  hyph-kn.pat.json  hyph-la-x-classic.pat.json  hyph-lv.pat.json  hyph-nl.pat.json  hyph-ro.pat.json  hyph-sa.pat.json  hyph-sh-latn.pat.json  hyph-sv.pat.json  hyph-th.pat.json  hyph-tr.pat.json  hyph-uk.pat.json
json-nfkd/: hyph-af.hyp.json  hyph-as.pat.json  hyph-ca.hyp.json  hyph-cu.pat.json  hyph-da.pat.json  hyph-el-monoton.pat.json  hyph-el-polyton.pat.json  hyph-en-us.pat.json  hyph-es.pat.json  hyph-et.pat.json  hyph-eu.pat.json  hyph-fi.pat.json  hyph-fr.pat.json  hyph-fur.pat.json  hyph-ga.pat.json  hyph-grc.pat.json  hyph-hi.pat.json  hyph-hr.pat.json  hyph-hsb.hyp.json  hyph-hsb.pat.json  hyph-kmr.pat.json  hyph-kn.pat.json  hyph-mul-ethi.pat.json  hyph-nl.pat.json  hyph-oc.pat.json  hyph-or.pat.json  hyph-pa.pat.json  hyph-pl.pat.json  hyph-pt.pat.json  hyph-rm.pat.json  hyph-ro.pat.json  hyph-ru.pat.json  hyph-sa.pat.json  hyph-sh-latn.hyp.json  hyph-sk.hyp.json  hyph-sv.pat.json  hyph-tk.pat.json  hyph-tr.pat.json  hyph-zh-latn-pinyin.pat.json
json-none/: hyph-bn.pat.json  hyph-ca.pat.json  hyph-cop.pat.json  hyph-cu.hyp.json  hyph-cu.pat.json  hyph-da.pat.json  hyph-el-monoton.pat.json  hyph-el-polyton.pat.json  hyph-es.pat.json  hyph-fr.pat.json  hyph-ga.hyp.json  hyph-grc.pat.json  hyph-hsb.hyp.json  (+15 more)
(+3 files in other folders)
