name:                hyph-utf8
version:             0.1.0.0
synopsis:            Plaintext to JSON conversion for Knuth-Liang hyphenation patterns
description:         Please see README.md
homepage:            http://github.com/ndr-qef/hyph-utf8.json
license:             BSD3
license-file:        LICENSE
author:              ndr
maintainer:          ndr@qef.io
copyright:           2016 ndr
build-type:          Simple
cabal-version:       >=1.10

data-dir:      txt
data-files:    *.hyp.txt, *.pat.txt, *.lic.txt, *.chr.txt


library
  hs-source-dirs:      src
  exposed-modules:     Hyph_UTF8, Hyph_UTF8.Language
  other-modules:       Paths_hyph_utf8
  build-depends:
      base  >= 4.7 && < 5
    , aeson >= 0.9
    , bytestring >= 0.10
    , text  >= 1.2
    , text-icu >= 0.7
  default-language:    Haskell2010

executable hyph-utf8-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hyph-utf8
  default-language:    Haskell2010

test-suite hyph-utf8-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hyph-utf8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ndr-qef/hyph-utf8.json
